<resources>
    <!-- Menu -->
    <string name="app_name">FlashLearn</string>
    <string name="action_profile">Profile</string>
    <string name="action_find">Find</string>
    <string name="action_logout">Logout</string>

    <!-- Item Slider -->
    <string name="slide_delete">DELETE</string>

    <string name="course_create">CREATE</string>
    <string name="course_learn">LEARN</string>
    <string name="title_course">Courses</string>
    <string name="profile">Profile</string>

    <!--
    Implementing OnboardingUtils
    http://blog.grafixartist.com/onboarding-android-viewpager-google-way/
    -->
    <string name="back_button">BACK</string>
    <string name="next_button">NEXT</string>
    <string name="continue_button">CONTINUE</string>
    <string name="finish_button">FINISH</string>
    <string name="submit_button">SUBMIT</string>

    <!--
    Strings for user creation process
    -->
    <string name="user_creation_student_teacher_question">ARE YOU A STUDENT OR A TEACHER?</string>
    <string name="user_creation_student">STUDENT</string>
    <string name="user_creation_teacher">TEACHER</string>

    <string name="user_creation_college_school_question">DO YOU ATTEND A COLLEGE OR SCHOOL?</string>
    <string name="user_creation_college">COLLEGE</string>
    <string name="user_creation_school">SCHOOL</string>

    <string name="user_creation_location_question">WHICH %1$s DO YOU ATTEND?</string>
    <string name="user_creation_course_question">WHICH COURSE DO YOU ATTEND?</string>

    <string name="user_creation_name_question">PLEASE ENTER YOUR NAME</string>
    <string name="user_creation_name_placeholder">Name</string>
    <string name="user_creation_name_prompt">Name must be at least 3 characters.</string>

    <string name="login_sign_up">Don\'t have an account? Sign up.</string>
    <string name="login_login">Already have an account? Log in.</string>
    <string name="login_email_placeholder">Email</string>
    <string name="login_password_placeholder">Password</string>
    <string name="login_password_confirm_placeholder">Confirm Password</string>
    <string name="login_failure_prompt">Some fields are empty or incorrect.</string>
    <string name="login_confirm_result">Signing in…</string>

    <string name="setup_email_prompt">Please enter a valid email address.</string>
    <string name="setup_password_prompt">Password must be at least 8 characters.</string>
    <string name="setup_confirm_prompt">Passwords do not match.</string>
    <string name="setup_confirm_prompt_email">Email is already in use.</string>
    <string name="setup_confirm_result">Signing up…</string>
    <string name="setup_update_result">Updating…</string>

    <!--
    Strings for quiz
    -->
    <string name="enter_quiz_name_here">enter Quiz Name here</string>
    <string name="Question">Question</string>
    <string name="option_1">option_1</string>
    <string name="option_2">option_2</string>
    <string name="option_3">option_3</string>
    <string name="option_4">option_4</string>
    <string name="answer">Answer</string>
    <string name="exit_quiz">Exit Quiz</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="quiz_library">Quiz Library</string>
    <string name="welcome_to_your_quiz_directory">Welcome to Your Quiz Directory</string>
    <string name="view_college_quiz_library">View College Quiz Library</string>
    <string name="view_user_quiz_library">View User Quiz Library</string>
    <string name="create_a_new_quiz">Create a new Quiz</string>
    <!--
    Strings for flashcard
    -->
    <string name="exit_flashCard">Exit Flashcard</string>
    <string name="enter_definition_here">enter definition here</string>
    <string name="enter_word_here">enter word here</string>
    <string name="enter_flashcard_set_name_here">enter flashcard set name here</string>
    <string name="create_new_flashcard">create new Flashcard</string>
    <string name="flashcard_library">Flashcard Library</string>
    <string name="flip">Flip</string>
    <string name="view_college_library">View College Flashcard Library</string>
    <string name="view_own_flashcard_library">View Own Flashcard Library</string>
    <string name="create_a_new_flashcard">Create a new Flashcard</string>
    <string name="welcome_to_your_flashcards_directory">Welcome to your Flashcard Directory</string>

    <!--
    Strings for user homepage / workspace
    -->
    <string name="quiz_selection">Quiz</string>
    <string name="flashcard_selection">Flashcard</string>
    <string name="workspace">Workspace</string>
    <!--
    Strings for intro page
    -->
    <string name="flashlearning">FlashLearning</string>
    <string name="enter">Enter</string>
    <!--
    Strings for quiz or flashcard learning
    -->
    <string name="save_to_personal_library">Save to Personal Library</string>
    <string name="create">create</string>






</resources>
