<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fleacircus.com.learningproject.HomeActivity">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="1"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_find"
        android:orderInCategory="2"
        android:title="@string/action_find"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_course"
        android:orderInCategory="2"
        android:title="@string/action_course"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="2"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
