<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <Button
        android:id="@+id/buttonOpt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonOpt2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="#4d4dff"
        android:text="@string/option_1"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonOpt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonOpt3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="#4d4dff"
        android:text="@string/option_2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonOpt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonOpt4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="#4d4dff"
        android:text="@string/option_3"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonOpt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:background="#4d4dff"
        android:text="@string/option_4"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/questionsTxt"
        android:layout_width="361dp"
        android:layout_height="248dp"
        android:layout_above="@+id/buttonOpt1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:background="#cceeff"
        android:gravity="center_horizontal|center"
        android:padding="10dp"
        android:text="@string/Question"
        android:textSize="25sp" />

</RelativeLayout>